...

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:id="@+id/adminFeatures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Admin Features"
                        android:fontFamily="@font/dmsans_regular"
                        android:gravity="bottom"
                        android:textSize="20sp"
...

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/toolbar_person"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

...
