<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/royalBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Event"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_add"
            android:contentDescription="Save"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/royalBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:tabIndicatorColor="#6495ED"
        app:tabIndicatorHeight="4dp"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/darker_gray"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintBottom_toTopOf="@id/toolbarExtra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/toolbarExtra"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:fitsSystemWindows="false"
        android:orientation="horizontal"
        android:paddingBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/toolbar_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true" >

            <ImageButton
                android:id="@+id/toolbar_home_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:contentDescription="blue_home"
                android:src="@drawable/ic_home_outline"
                android:clickable="false"
                android:focusable="false"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/homeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="center_horizontal"
                android:text="Home"
                android:textSize="11.5sp"
                android:clickable="false"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbar_qrscanner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/toolbar_qrscanner_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:contentDescription="blue_home"
                android:src="@drawable/ic_qr_code"
                android:clickable="false"
                android:focusable="false"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/qrTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="center_horizontal"
                android:text="Scan QR"
                android:textSize="11.5sp"
                android:clickable="false"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbar_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/toolbar_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:contentDescription="blue_home"
                android:src="@drawable/ic_add"
                android:clickable="false"
                android:focusable="false"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/addTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="center_horizontal"
                android:text="Add Event"
                android:textSize="11.5sp"
                android:clickable="false"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbar_favourite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/toolbar_favourite_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:contentDescription="blue_home"
                android:src="@drawable/ic_activity_outline"
                android:clickable="false"
                android:focusable="false"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/searchTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="center_horizontal"
                android:text="Activities"
                android:textSize="11.5sp"
                android:clickable="false"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/toolbar_person"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/toolbar_person_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:contentDescription="blue_home"
                android:src="@drawable/ic_profile_outline"
                android:clickable="false"
                android:focusable="false" />

            <Space
                android:layout_width="0dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/profileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="center_horizontal"
                android:text="Profile"
                android:textSize="11.5sp"
                android:clickable="false"
                android:focusable="false" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>