...
                android:text="Event Name"
                android:textSize="16sp"
                android:textColor="@color/figmaBlue"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EventName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter Event Name"
                android:inputType="text"
                android:background="@drawable/custom_input"
                android:padding="12dp"
...
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textSize="16sp"
                android:textColor="@color/figmaBlue"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Description"
...
