...
                    android:background="@null"
                    android:contentDescription="Join Events Plus Button"
                    android:src="@drawable/ic_plus_filled"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/joined_eventTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_weight="1"
                    android:fontFamily="@font/dmsans_regular"
                    android:scrollbars="vertical"
...
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:src="@drawable/ic_plus_filled"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/created_eventsTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_weight="1"
                    android:fontFamily="@font/dmsans_regular"
                    android:scrollbars="vertical"
...
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/facilities_view_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:contentDescription="Join Events Plus Button"
                    android:src="@drawable/ic_plus_filled"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/user_facilitiesTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_weight="1"
                    android:fontFamily="@font/dmsans_regular"
                    android:scrollbars="vertical"
...
                android:text="Add Event"
                android:textSize="11.5sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbar_favourite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
...
